[tool.poetry]
name = "invoicing"
version = "2.1.1"
description = "Generate invoice PDF from LaTeX template"
authors = ["Sarcoma <sean@orderandchaoscreative.com>"]
license = "MIT"

[tool.poetry.scripts]
invoicing = "invoicing.__main__:main"

[tool.poetry.dependencies]
python = "^3.5"
ansi-colours = "0.2.6"
Flask = "1.0.2"
Jinja2 = "2.10.3"
more-itertools = "4.3.0"
Pygments = "2.2.0"
pytest = "3.10.0"
python-dateutil = "2.7.5"
python-dotenv = "0.9.1"
text-template = "0.1.4"
unicode = "2.6"
uWSGI = "2.0.17.1"
Werkzeug = "0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
